# trajectopy-core

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  alignment_settings.json  kml_test.py  matching_settings.json  pyproject.toml  rel_settings.json  settings-test.py  test.kml  tox.ini  trajectopy.spec
docs/: alignment.actions.md  alignment.data.md  alignment.direct.helmert_transformation.md  alignment.direct.leverarm.md  alignment.direct.md  alignment.direct.timeshift.md  alignment.direct_helmert_transformation.md  alignment.direct_leverarm.md  alignment.direct_timeshift.md  alignment.functional_model.equations.md  alignment.functional_model.interface.md  alignment.functional_model.md  alignment.ghm.data.md  alignment.ghm.estimation.md  alignment.ghm.functional_model.equations.md  alignment.ghm.functional_model.interface.md  alignment.ghm.functional_model.md  alignment.ghm.md  alignment.ghm_estimation.md  alignment.md  alignment.parameters.md  alignment.result.md  alignment.rotation_alignment.md  alignment.util.md  alignment.utils.md  approximation.cubic_approximation.md  approximation.md  approximation.mls_approximation.md  approximation.rot_approximation.md  approximation.trajectory_approximation.md  approximation.util.md  approximation.voxelizer.md  conf.py  definitions.md  evaluation.abs_traj_dev.md  evaluation.ate_result.md  evaluation.comparison.md  evaluation.deviations.md  evaluation.matching.md  evaluation.md  (+56 more)
docs/source/: trajectopy_core.alignment.rst  trajectopy_core.io.rst  trajectopy_core.settings.rst  trajectopy_core.util.rst
example_scripts/: alignment.py  ate.py  mpl_plot.py  multi_report.py  plot.py  report.py  rpe.py  single_report.py  trajectory_plot.py
test/: test_alignment.py  test_comparison.py  test_io.py  test_pipeline.py  test_settings.py  test_sorting.py  test_trajectory.py  util.py
test/tmp/: abs_dev_0.result  align_1.result  rel_dev_2.result  rel_dev_3.result  settings0.yaml  settings1.yaml  settings2.yaml  settings3.yaml  settings4.yaml  settings5.yaml  settings6.yaml  settings7.yaml  settings8.yaml  settings9.yaml  trajectory_4.csv
trajectopy_core/: LICENSE  definitions.py  kml.py  matching.py  merging.py  pipelines.py  rotationset.py  settings.py  spatialsorter.py  trajectory.py  utils.py
trajectopy_core/alignment/: __init__.py  actions.py  data.py  direct.py  direct_helmert_transformation.py  direct_leverarm.py  direct_timeshift.py  egrad_interface.py  equations.py  estimation.py  ghm_estimation.py  parameters.py  result.py  rotation_alignment.py  settings.py  utils.py
trajectopy_core/approximation/: cubic_approximation.py  math_utils.py  mls_approximation.py  rot_approximation.py  trajectory_approximation.py  util.py  voxelizer.py
trajectopy_core/evaluation/: __init__.py  abs_traj_dev.py  ate_result.py  comparison.py  deviations.py  matching.py  metrics.py  rel_traj_dev.py  results.py  rpe_result.py  settings.py  utils.py
trajectopy_core/input_output/: rosbag.py  trajectory_io.py  utils.py
trajectopy_core/io/: header.py  result_io.py  rosbag.py  rosmsg.py  trajectory_io.py  utils.py
(+118 files in other folders)
