[tool.poetry]
name = "trajectopy-core"
version = "2.0.0"
description = "Trajectory Evaluation in Python"
authors = ["Gereon Tombrink <tombrink@igg.uni-bonn.de>"]
maintainers = ["Gereon Tombrink <tombrink@igg.uni-bonn.de>"]
license = "MIT"
keywords = ["trajectory", "evaluation", "alignment", "similarity", "leverarm", "epsg", "robotics"]
readme = "README.md"
homepage = "https://github.com/gereon-t/trajectopy-core"
repository = "https://github.com/gereon-t/trajectopy-core.git"

[tool.poetry.dependencies]
python = ">=3.8.2,<3.12"
numpy = "^1.24.4"
rotationset = "^0.1.0"
pointset = "^0.1.5"
pandas = "^2.0.3"
autograd = "^1.6.2"
jinja2 = "^3.1.2"
plotly = "^5.18.0"
rich = "^13.6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pre-commit = "^3.5.0"
tox = "^4.11.3"

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"